# eq677

./: .gitignore  COUNTEREXAMPLE_PROMPT.md  Cargo.toml  HINT_PACK.md  PROOF_PROMPT.md  RAILROAD.md  README.md  SOLVER_PROMPT.md  analyze_db.py  cascade_gap_search.py  color-extensions-nonlinear.py  database_comments.md  e677_portfolio.py  e677_search.py  executive_summary_math_reasoning.md  exotic_search.py  explore_colored_magma.py  extract_identities.py  finite_counterexample_path.tex  finite_e677_implies_e255_proof.md  generate_cascade_atp.py  implementation_pass_2026-05-16.md  literature.aux  literature.out  literature.tex  math_search_pass_2026-05-16.md  parallel_search.py  progress.json  proof_candidates.py  railroad_false.py  railroad_true.py  route_pass_2026-05-14.md  run_backup1_restartable.cmd  run_backup1_restartable.ps1  run_colored_candidate_sweep.ps1  run_colored_magma_deep_probe.ps1  run_colored_magma_sweep.ps1  run_colored_smart_sweep.ps1  run_construction_sweep.ps1  run_deepseek_math_v2.py  (+8 more)
atp/: anti255-direct.in  cascade-d5-0-1.in  cascade-d5-0-2.in  cascade-d5-0-3.in  cascade-d5-0-4.in  cascade-d5-1-2.in  cascade-d5-1-3.in  cascade-d5-1-4.in  cascade-d5-2-3.in  cascade-d5-2-4.in  cascade-d5-3-4.in  cascade-d6-0-1.in  cascade-d6-0-2.in  cascade-d6-0-3.in  cascade-d6-0-4.in  cascade-d6-0-5.in  cascade-d6-1-2.in  cascade-d6-1-3.in  cascade-d6-1-4.in  cascade-d6-1-5.in  cascade-d6-2-3.in  cascade-d6-2-4.in  cascade-d6-2-5.in  cascade-d6-3-4.in  cascade-d6-3-5.in  cascade-d6-4-5.in  cascade-d7-0-1.in  cascade-d7-0-1.p  cascade-d7-0-2.in  cascade-d7-0-2.p  (+51 more)
(+26 files in other folders)
