[package]
name = "eq677"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = "0.10.0"
fxhash = "0.2.1"
indexmap = "2.11.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
petgraph = "0.7.1"
rand = "0.9.2"
rayon = "1.11.0"
smallvec = "1.15.1"

[target.'cfg(not(windows))'.dependencies]
nauty-pet = "0.13.0"
z3 = "0.19.6"

[features]
flamegraph = []

[profile.release]
debug = true
